# financebench-neo4j-benchmark

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/fbneo/: __init__.py  answer.py  chunking.py  cli.py  config.py  data.py  embeddings.py  evaluate.py  ingest.py  neo4j_store.py  pdf.py  report.py  retrieval.py  scoring.py  types.py
tests/: test_chunking.py  test_config.py  test_data.py  test_embeddings.py  test_neo4j_store.py  test_scoring.py
