[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financebench-neo4j-benchmark"
version = "0.1.0"
description = "V1 Neo4j GraphRAG benchmark harness for FinanceBench"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.26.0",
  "pymupdf>=1.24.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
fbneo = "fbneo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fbneo*"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
